pkg/provider/kubernetes/ingress/fixtures/Ingress-with-non-matching-provider-traefik-ingressClass-and-annotation_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: toto

spec:
  rules:
  - http:
        paths:
        - path: /bar
          backend:
            service:
              name: service1
              port:
                number: 80
          pathType: Prefix
